# private_genai

./: .gitignore  README.md  chat.py  config.toml  docker-compose.yml  prepare_document-vdb.py  prepare_usecase-vdb.py  pyproject.toml
data/: README.md
data/txt/: germany-solar-panels-climate-change_29Jul2024.txt  japan-inflation-rates_29Jul2024.txt  nyt_28Jul2024.txt  venezuela-election-results_29Jul2024.txt
experiments/: chat_sandbox.py
experiments/huggingface/: gradio_testing  ngrok_testing.py
experiments/langchain/basics/: add_documents_vector_store.py  eba_docs_vector_store.py  json_parser.py  multiple_articles_vector_store.py  single_article.py
experiments/langchain/chain_lab/: check_if_collection_exists.py  collection_overview  context_assessment.py  count_documents.py  dynamic_context_size.py  query_assessment.py  robust_references,py  use_case_detection
experiments/openai/: openai_testing.py
experiments/other/: average_chunk_sizes.py  context_trimming.py  encoding_detection.py  generate_hex_numbers.py  parallel_summarization.py  test_LLMClient.py
experiments/streamlit/: app.py
experiments/weaviate/: Basics_sandbox.ipynb  Basics_standalone_cells.ipynb  filters.py  query_sandbox.ps1
rag_proof_of_concept/: __init__.py  context.py  readers.py  utils.py  vdb.py
rag_proof_of_concept/agent/: __init__.py  core.py  hist.py  pre.py  refs.py
rag_proof_of_concept/agent/use_cases/: __init__.py  collection_overview.py  count_documents.py  generic.py  self.py
use_cases/: collection_overview.yaml  count_documents.yaml  generic.yaml  self.yaml
