[tool.poetry]
name = "rag-proof-of-concept"
version = "0.1.0"
description = ""
authors = ["Szymon Hennel <szymon.hennel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
weaviate-client = "^4.6.7"
ipykernel = "^6.29.5"
langchain = "^0.2.12"
langchain-openai = "^0.1.20"
langchain-community = "^0.2.11"
langchain-weaviate = "^0.0.2"
argparse = "^1.4.0"
streamlit = "^1.37.1"
pypdf = "^4.3.1"
chardet = "^5.2.0"
tqdm = "^4.66.5"
pymupdf = "^1.24.9"
toml = "^0.10.2"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"
inflect = "^7.4.0"
seaborn = "^0.13.2"
nltk = "^3.9.1"
gradio-client = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
