[tool.poetry]
name = "rag-proof-of-concept"
version = "0.1.0"
description = ""
authors = ["Giacomo Miceli <gia.miceli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
weaviate-client = "4.6.7"
ipykernel = "^6.29.5"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
langchain-community = "^0.3.7"
langchain-weaviate = "^0.0.3"
argparse = "^1.4.0"
streamlit = "^1.40.1"
pypdf = "^5.1.0"
chardet = "^5.2.0"
tqdm = "^4.67.0"
pymupdf = "^1.24.13"
toml = "^0.10.2"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
inflect = "^7.4.0"
seaborn = "^0.13.2"
nltk = "^3.9.1"
gradio-client = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
